--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ Title: Samuel Padierna
 #Logo:
 #Description: Text below
 show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
