--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 Title: Samuel Padierna
-Logo: Assets/Picture1_circle.png
+Logo: /Assets/Picture1_circle.png
 #Description: Text below
 show_downloads: true
 theme: jekyll-theme-minimal
