--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Samuel Padierna
 logo: /Assets/Picture1_circle.png
 #Description: Text below
-show_downloads: true
+show_downloads: false
 theme: jekyll-theme-minimal
